--- a/main.css
+++ b/main.css
@@ -1,3 +1,20 @@
 #main {
 	width: 80%;
 }
+#big-picture {
+	width: inherit;
+	height:400px;
+}
+#top-menu {
+	width: inherit;
+	height: 50px;
+}
+#api-row {
+	height:	150px;
+}
+#main-body {
+	width: 65%;
+}
+#food-pics{
+	width: 25%;
+}
