--- a/main.css
+++ b/main.css
@@ -1,20 +1,55 @@
-#main {
-	width: 80%;
+
+ul {
+	list-style: none;
+}
+
+#wrapper {
+	width: 1020px;
+	margin: auto;
 }
 #big-picture {
 	width: inherit;
-	height:400px;
+	height:300px;
+	background: lightgrey;
+	margin-bottom: -10;
 }
 #top-menu {
-	width: inherit;
-	height: 50px;
+
+	margin: 0 auto;
+}
+#top-menu li {
+	display: inline-block;
+	width: 15%;
+	border: 1px solid lightgrey;
+	text-align: center;
+	padding: 20px;
+	margin-left: -5px;
+	margin-top: -16px;
+}
+#left-corner {
+	border-bottom-left-radius: 8px;
+}
+#right-corner {
+	border-bottom-right-radius: 8px;
 }
 #api-row {
 	height:	150px;
 }
+.api-panel {
+	background: lightgrey;
+}
+
 #main-body {
 	width: 65%;
+	display: inline-block;
+	background: lightgrey;
+	margin-right: 2%;
+	height: 800px;
+
 }
-#food-pics{
-	width: 25%;
+#right-full-panel{
+	width: 32%;
+	display: inline-block;
+	vertical-align: top;
+	background: lightblue;
 }
