--- a/main.css
+++ b/main.css
@@ -33,23 +33,56 @@ ul {
 	border-bottom-right-radius: 8px;
 }
 #api-row {
-	height:	150px;
+	width: 1050px;;
 }
 .api-panel {
+	display: inline-block;
+	width: 30%;
+	margin-right: 3%;
+	margin-bottom: 20px;
+	height: 240px;
 	background: lightgrey;
 }
 
-#main-body {
-	width: 65%;
+#lower-body {
+	width: 1050px;
+}
+
+#left-full-panel {
+	width: 69%;
 	display: inline-block;
 	background: lightgrey;
 	margin-right: 2%;
-	height: 800px;
+	height: 1400px;
 
 }
 #right-full-panel{
-	width: 32%;
+	width: 25%;
 	display: inline-block;
 	vertical-align: top;
 	background: lightblue;
+}
+
+#foods {
+
+}
+
+.food-photo {
+	height: 200px;
+	width: 200px;
+	background: pink;
+	margin-left: -10px;
+	margin-bottom: 20px;
+}
+#logo {
+	height: 200px;
+	width: 200px;
+	background: grey;
+	margin-left: 30px;
+	margin-bottom: 20px;
+}
+
+.icon {
+	display: inline-block;
+	margin-right: 15px;
 }
