--- a/main.css
+++ b/main.css
@@ -22,7 +22,7 @@ ul {
 	width: 15%;
 	border: 1px solid lightgrey;
 	text-align: center;
-	padding: 20px;
+	padding: 15px 20px;
 	margin-left: -5px;
 	margin-top: -16px;
 }
