--- a/main.css
+++ b/main.css
@@ -82,21 +82,31 @@ ul {
 #api-row {
 	width: 1050px;
 	padding-top: 10px;
+	padding-left: 22px;
 }
 .api-panel {
 	display: inline-block;
 	width: 30%;
-	margin-right: 3%;
+	margin-right: 1%;
 	margin-bottom: 20px;
 	height: 240px;
-	background: lightgrey;
+	background: white;
+	float: left;
 }
 
 .redAPI {
 	border: 3px solid #b90f0f;
 	border-radius: 5px;
 }
-
+.locationBoxH4 {
+	text-align: center;
+	bottom-border: 1px solid #CECECE;
+}
+.locationBox {
+	font-size: 10px;
+	color: black;
+	text-align: center;
+}
 #lower-body {
 	width: 1050px;
 }
@@ -113,12 +123,18 @@ ul {
 	width: 25%;
 	display: inline-block;
 	vertical-align: top;
-	background: lightblue;
+	background: white;
+	border: 3px solid #b90f0f;
+	border-radius: 5px;
+}
+
+#right-full-panel img {
+	height: 200px;
+	width: 200px;
 }
 
 #foods {
 
-}
 
 .food-photo {
 	height: 200px;
@@ -127,6 +143,8 @@ ul {
 	margin-left: -10px;
 	margin-bottom: 20px;
 }
+
+
 #logo {
 	height: 200px;
 	width: 200px;
