--- a/main.css
+++ b/main.css
@@ -25,6 +25,21 @@ ul {
 	height: 328px;
 }
 
+#hero {
+    height:300px;
+    width:960px;
+}
+#hero div {
+    position:absolute;
+    z-index: 0;
+}
+#hero div.previous {
+    z-index: 1;
+}
+#hero div.current {
+    z-index: 2;
+}
+
 #top-menu {
 	margin: 0 auto;
 	text-decoration: none;
