--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 
 body {
-	background-image: url("assets/backgrounds/notebook.png");
+	background-image: url("assets/backgrounds/mooning.png");
 	background-repeat: repeat;
 }
 ul {
@@ -14,7 +14,7 @@ ul {
 
 #big-picture {
 	width: inherit;
-	height:328px;
+	height:316px;
 	background: lightgrey;
 	margin-bottom: -10;
 	clear: both;
@@ -22,7 +22,7 @@ ul {
 
 #big-picture img {
 	width: 1020px;
-	height: 328px;
+	height: 316px;
 }
 
 #hero {
@@ -107,12 +107,14 @@ ul {
 #api-row {
 	width: 1050px;
 	padding-top: 10px;
-	padding-left: 22px;
+	padding-left: 10px;
+    margin-right: 0px;
+    padding-right: 0px;
 }
 .api-panel {
 	display: inline-block;
-	width: 30%;
-	margin-right: 1%;
+	width: 29%;
+	margin-right: 2%;
 	margin-bottom: 20px;
 	height: 240px;
 	background: white;
@@ -178,19 +180,21 @@ ul {
 }
 
 .redAPI {
-	border: 3px solid #b90f0f;
+	border: 5px solid #b90f0f;
 	border-radius: 5px;
 }
 .locationBoxH4 {
 	text-align: center;
 	margin-bottom: 10px;
+	margin-top: 5px;
+	font-family: "Hind", "sans-serif";
 }
 .locationBoxH4 img{
 	width: 9px;
 	height: 9px;
 }
 .locationBox {
-	font-size: 10px;
+	font-size: 11px;
 	color: black;
 	text-align: center;
 	margin: auto 0px;
@@ -209,11 +213,12 @@ iframe {
 }
 #lower-body {
 	width: 1050px;
+	display: ;
 }
 
 #left-full-panel {
 	width: 69%;
-	display: inline-block;
+	display: inline;
 	background: lightgrey;
 	margin-right: 2%;
 	height: 1400px;
@@ -233,6 +238,7 @@ iframe {
 	border-radius: 5px;
 	margin: 0 auto;
 	padding: 0;
+	float: right;
 }
 
 #right-full-panel img {
@@ -315,4 +321,201 @@ iframe {
 	padding-left: 10px;
 	width: 300px;
 	float: left;
+}
+
+
+/*Sliding Menu CSS */
+
+.nav {
+margin-bottom: 18px;
+margin-left: 0;
+list-style: none;
+width: 620px;
+}
+
+.nav > li > a {
+display: block;
+}
+
+.nav-tabs{
+*zoom: 1;
+}
+
+.nav-tabs:before,
+.nav-tabs:after {
+display: table;
+content: "";
+}
+
+.nav-tabs:after {
+clear: both;
+}
+
+.nav-tabs > li {
+float: left;
+}
+
+.nav-tabs > li > a {
+padding-right: 12px;
+padding-left: 12px;
+margin-right: 2px;
+line-height: 14px;
+}
+
+.nav-tabs {
+border-bottom: 3px solid #b90f0f;
+}
+
+.nav-tabs > li {
+margin-bottom: -1px;
+}
+
+.nav-tabs > li > a {
+padding-top: 8px;
+padding-bottom: 8px;
+line-height: 18px;
+border: 1px solid transparent;
+ -webkit-border-radius: 4px 4px 0 0;
+-moz-border-radius: 4px 4px 0 0;
+border-radius: 4px 4px 0 0;
+text-decoration: none;
+font-weight: bold;
+background-color: #000000;
+color: white;
+font-family: "Hind", "sans-serif";
+}
+
+.nav-tabs > li > a:hover {
+border-color: #000000;
+font-family: "Hind", "sans-serif";
+}
+
+.nav-tabs > .active > a, {
+color: #ffffff;
+cursor: default;
+background-color: #000000;
+border: 1px solid #ddd;
+border-bottom-color: transparent;
+text-decoration: none;
+font-weight: bold;
+font-family: "Hind", "sans-serif";
+}
+
+.nav-tabs > .active > a:hover {
+color: #b90f0f;
+cursor: default;
+background-color: #000000;
+border: 1px solid #ddd;
+border-bottom-color: transparent;
+text-decoration: none;
+font-weight: bold;
+font-family: "Hind", "sans-serif";
+}
+
+
+li {
+line-height: 18px;
+}
+
+.tab-content.active{
+display: block;
+}
+
+.tab-content.hide{
+display: none;
+}
+
+#tab1, #tab2, #tab3, #tab4 {
+	width: 600px;
+	max-height: 500px;
+	font-family: "Hind", "sans-serif";
+}
+
+#tab1 img {
+	width: 275px;
+	height: 183px;
+	float: right;
+}
+
+#tabMenu {
+	width: 650px;
+	margin-right: 0px;
+	padding-right: 0px;
+}
+
+/* Form CSS */
+
+#reservations {
+	font-family: "Hind", "sans-serif";
+	font-size: 12px;
+}
+
+#reservations img {
+	width: 100px;
+	height: 39px;
+	border: 2px solid black;
+}
+
+#reservations h3 {
+	font-family: "Hind", "sans-serif";
+	font-weight: bolc;
+}
+#reservations input[type="text"] {
+	margin-left: 5px;
+	padding-left: 10px;
+	width: 200px;
+	font-size: 12px;
+}
+#reservations button {
+	width: 125px;
+	height: 35px;
+	background-color: #b90f0f;
+	color: #000000;
+	font-family: "Hind", "sans-serif";
+	border-radius: 5px;
+	font-size: 18px;
+	text-align: center;
+	font-weight: bold;
+}
+
+#reservations button a {
+	text-decoration: none;
+	font-family: "Hind", "sans-serif";
+	color: #000000;
+	font-weight: bold;
+}
+
+#reservations button a:hover {
+	text-decoration: none;
+	font-family: "Hind", "sans-serif";
+	color: #ffffff;
+	font-weight: bold;
+	width: 125px;
+	height: 35px;
+}
+
+#reservations select {
+	font-family: "Hind", "sans-serif";
+	border-radius: 5px;
+	font-size: 12px;
+	text-align: center;
+	font-weight: bold;
+}
+
+#reservations select option {
+	font-family: "Hind", "sans-serif";
+	border-radius: 5px;
+	font-size: 12px;
+	text-align: center;
+	font-weight: bold;
+}
+
+/* REVIEWS BOX */
+
+#reviews {
+	margin-top: 0px;
+	padding-top: 0px;
+}
+
+width: 500px;
 }
