--- a/main.css
+++ b/main.css
@@ -1,8 +1,10 @@
-body {
+html, body {
+  height: 100%;
+}
 
+body {
     background-image: url("assets/backgrounds/mooning.png");
     background-repeat: repeat;
-
 }
 ul {
     list-style: none;
@@ -11,6 +13,9 @@ ul {
 #wrapper {
     width: 1020px;
     margin: auto;
+    min-height: 100%;
+    margin-bottom: -60px;
+
 }
 
 #big-picture {
@@ -43,7 +48,7 @@ ul {
     z-index: 2;
 }
 
-#top-menu {
+/*#top-menu {
     margin: 0 auto;
     text-decoration: none;
     background-color: black;
@@ -85,7 +90,7 @@ ul {
     text-decoration: none;
     color: #b90f0f;
     font-weight: bold;
-}
+}*/
 
 .paw img {
     width: 5px;
@@ -97,7 +102,7 @@ ul {
     height: 5px;
 }
 
-#top-menu a:hover li {
+/*#top-menu a:hover li {
     border-top: 3px solid #b90f0f;
 }
 
@@ -106,7 +111,7 @@ ul {
 }
 #right-corner {
     border-bottom-right-radius: 8px;
-}
+}*/
 #api-row {
     margin-top: 30px;
 }
@@ -194,26 +199,6 @@ ul {
 #specialItem {
 	float: left;
 }
-.menu_divisions {
-	position: relative;
-	width: 100%;
-}
-.item {
-	display: inline-block;
-	position: relative;
-	top: 3px;
-	left: 2px;
-}
-.price {
-	display: inline-block;
-	position: relative;
-	top: 3px;
-	right: -10px;
-	margin-right: 10px;
-}
-.price:before {
-	content: "$";
-}
 
 #news {
     padding-left: 10px;
@@ -261,7 +246,7 @@ iframe {
     width: 65%;
     background: lightgrey;
     margin-right: 2%;
-    height: 1400px;
+    height: 1800px;
     float: left;
 }
 #right-full-panel{
@@ -276,6 +261,55 @@ iframe {
 .tabs li {
     display: inline-block;
     margin-right: 40px;
+}
+.menu_divisions {
+	position: relative;
+	width: 100%;
+}
+.menu-course {
+  margin: 1px;
+}
+.item {
+	display: inline-block;
+	position: relative;
+  font-size: 1.1rem;
+  font-weight: bold;
+  line-height: 0.9rem;
+  margin: 0;
+	top: 3px;
+	left: 2px;
+}
+.price {
+	display: inline-block;
+	position: relative;
+  font-weight: bold;
+  font-size: 1.2rem;
+	top: 3px;
+	right: -10px;
+	margin: 0 10px 0 0;
+}
+.price:before {
+	content: "$";
+}
+
+.soup-price {
+	display: inline-block;
+	position: relative;
+  font-weight: bold;
+  font-size: 1.2rem;
+	top: 3px;
+	right: -10px;
+	margin: 0 10px 0 0;
+}
+
+.soup-price span:before {
+  content: "$";
+}
+
+.description {
+  color: #938B8B;
+  font-size: 0.9rem;
+  margin: 0 0 0 0;
 }
 
 
@@ -297,6 +331,7 @@ iframe {
     height: 200px;
     width: 200px;
     border-radius: 5px;
+    margin-bottom: 10px;
 }
 
 .food-photo img {
