--- a/main.css
+++ b/main.css
@@ -307,9 +307,16 @@ iframe {
 }
 
 .description {
+  display: inline;
   color: #938B8B;
   font-size: 0.9rem;
   margin: 0 0 0 0;
+
+}
+.menu-added img{
+  display: inline;
+  height: 20px;
+  width: 20px;
 }
 
 
