--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 body {
-    background-image: url("assets/backgrounds/mooning.png");
+    background-image: url("assets/backgrounds/restaurant_icons.png");
     background-repeat: repeat;
 }
 ul {
@@ -16,6 +16,13 @@ ul {
     min-height: 100%;
     margin-bottom: -60px;
 
+}
+
+.name{
+    
+    font-size: 2em;
+    margin: 0.67em 0;
+}
 }
 
 #big-picture {
@@ -123,6 +130,11 @@ ul {
     margin-left: 16px;
 }
 
+#map .locationBoxH4 {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
 #special {
     margin-left: 15px;
     margin-right: 15px;
@@ -137,8 +149,8 @@ ul {
 }
 
 .api-panel img{
-    width: 10px;
-    height: 10px;
+    width: 120px;
+    height: 120px;
 }
 #news h5 {
     margin-top: 0;
@@ -214,6 +226,7 @@ ul {
     margin-bottom: 10px;
     margin-top: 5px;
     font-family: "Hind", "sans-serif";
+    border-bottom: 1px solid #A32929;
 }
 .locationBoxH4 img{
     width: 9px;
@@ -244,7 +257,7 @@ iframe {
 }
 #left-full-panel {
     width: 65%;
-    background: lightgrey;
+    background: white;
     margin-right: 2%;
     height: 1900px;
     float: left;
@@ -280,14 +293,15 @@ iframe {
 	left: 2px;
 }
 .price {
-	display: inline-block;
-	position: relative;
-  font-weight: bold;
-  font-size: 1.2rem;
-	top: 3px;
-	right: -10px;
-	margin: 0 10px 0 0;
+display: inline-block;
+position: relative;
+font-weight: bold;
+font-size: 1.2rem;
+top: 13px;
+right: -10px;
+margin: 0 10px 0 0;
 }
+
 .price:before {
 	content: "$";
 }
@@ -342,7 +356,7 @@ iframe {
     height: 200px;
     width: 200px;
     border-radius: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 .food-photo img {
